--- a/java/src/jmri/jmrit/vsdecoder/swing/VSDSwingBundle.properties
+++ b/java/src/jmri/jmrit/vsdecoder/swing/VSDSwingBundle.properties
@@ -27,13 +27,11 @@ NewDecoderConfigPaneTitle = Configure New VSDecoder
 MgrVolumeToolTip = Adjust master volume for all VSDecoders
 MgrMuteToolTip = Mute all VSDecoders
 MgrAddButtonToolTip = Add a new VSDecoder
-MgrCloseButtonToolTip = Close this window and shut down all VSDecoders
-MgrQuitMessage = To quit Virtual Sound Decoder Manager click [{0}]
 MgrAddDuplicateMessage = VSDecoder already exists
 
 # VSDControl
 OptionsButtonLabel = Options
-OptionButtonPressedMessage = Option Button is not yet implemented!
+#OptionButtonPressedMessage = Option Button is not yet implemented!
 OptionsDialogTitlePrefix = Options
 BlankVSDControlLabel = No Active Decoders
 
