Edit dispatcher properties for style Efficient log string variable style Adjust Length tooltip for unit option set Rename proper whatItems in TransitTableAction

--- a/java/src/jmri/NamedBeanBundle.properties
+++ b/java/src/jmri/NamedBeanBundle.properties
@@ -265,6 +265,7 @@ WarningTitle            = Warning
 ErrorTitle              = Error
 QuestionTitle           = Question
 ReminderTitle           = Reminder
+MessageTitle            = Message
 
 # Beantable (SML edit), jmrit (roster) and jmrix (cmri) items
 Show                    = Show
