--- a/java/src/jmri/server/json/Bundle.properties
+++ b/java/src/jmri/server/json/Bundle.properties
@@ -23,3 +23,5 @@ ErrorUnsupportedOperation=Unsupported operation attempted: {0}.
 ErrorMissingAttribute=Data attribute {0} is required.
 #Error message when URLEncoding fails for a property.
 ErrorUnencodable={2} property of {0} named {1} cannot be encoded in UTF-8
+#Error message sent when client sends a "client" token in a hello message that is is use by another client.
+ErrorClientConflict=Client "{0}" is in use by another connection.
