--- a/pom.xml
+++ b/pom.xml
@@ -516,6 +516,7 @@
                                 <File>jmri/jmrix/openlcb/SampleFactory.class</File>
                                 <File>jmri/util/swing/SamplePane.class</File>
                                 <File>apps/tests/Log4JFixture.class</File>
+                                <File>jmri/jmrit/display/EditorFrameOperator.class</File>
                             </excludes>
                             <rules>
                                 <rule>
