change from arithmetic to power series for ramp throttle increments

--- a/java/src/jmri/jmrit/logix/WarrantBundle.properties
+++ b/java/src/jmri/jmrit/logix/WarrantBundle.properties
@@ -189,6 +189,7 @@ WaitingForSensor= Waiting block "{0}" for sensor
 RunningLate     = In block "{0}", running late to next block
 RecordingScript = Recording Command Script
 StopPending		= Speed slowing from {0} in block {1} for {2} ahead.
+HaltPending		= Speed slowing from {0} in block {1} to halt.
 ThrottleFactor  = Throttle/Track Speed factor
 buttonInsertRow = Insert Row
 buttonDeleteRow = Delete Row
@@ -235,6 +236,7 @@ LearnError      = Cannot continue in Learn mode: {0}
 NoPaths         = No Paths in Block "{0}"
 PickAPath       = Choose a Path
 Origin          = Origin: {0}
+Ramp			= Ramp to Stop
 Halt            = Halt
 Resume          = Resume
 Retry           = Move into next block
@@ -285,7 +287,7 @@ PowerUnknown = Layout Power state unknown.
 PowerOn     = Layout Power On.
 PowerOff    = Layout Power Off.
 Emergency   = Emergency
-EStop       = E-Stop
+EStop       = Emergency Stop
 rampInterval= Ramp Step interval time (sec)
 throttleFactor= Throttle factor for setting track speed
 WarrantExists   = A Warrant named "{0}" or "{1}" already exists.
