Fix setting valid value in Special Action spinner when model has changed Refactor StateOn/Off Dutch translation, use common keys

--- a/java/src/jmri/NamedBeanBundle.properties
+++ b/java/src/jmri/NamedBeanBundle.properties
@@ -48,8 +48,8 @@ ColumnState             = State
 # called in code as Bundle.getMessage("MakeLabel", Bundle.getMessage("BeanName")) so translation must include {0}
 MakeLabel               = {0}:
 
-LightStateOff           = Off
-LightStateOn            = On
+StateOff                = Off
+StateOn                 = On
 LightStateIntermediate  = Intermediate
 LightStateTransitioning = Transitioning
 LightStateTransitioningToFullOn = Transitioning to Full On
