--- a/java/src/jmri/jmrit/beantable/SectionTransitTableBundle.properties
+++ b/java/src/jmri/jmrit/beantable/SectionTransitTableBundle.properties
@@ -4,6 +4,7 @@
 #     jmri.jmrit.beantable.TransitTableAction GUI elements not contained in 
 #     jmri.jmrit.beantable.BeanTableBundle.properties
 
+# compare entries with jmri.jmrit.dispatcher.DispatcherBundle
 SectionSystemNameHint = Enter system name for new Section, e.g. IY13
 SectionUserNameHint = Enter user name for Section, e.g. Sloan to Baxter
 SectionCreateButtonHint = Press to check entries and create a new Section.
@@ -69,14 +70,12 @@ ReplacePrimaryForSeqButton = Replace Primary For Order
 ReplacePrimaryForSeqButtonHint = Press to replace the primary Section at the entered order number, if possible.
 DeleteAlternateForSeqButton = Delete Alternate For Order
 DeleteAlternateForSeqButtonHint = Press to delete all alternate Sections at the entered order number, if any.
-AddAlternateForSeqButton = Add Alternate For Order
+AddAlternateForSeqButton = Add Alternate for Order
 AddAlternateForSeqButtonHint = Press to add an alternate Section at the entered order number, if possible.
 ReplacePrimaryChoice = Please select a Section to replace \nthe current Primary Selection.
 ReplacePrimaryTitle = Choose Section
 AddAlternateChoice = Please select an alternate Section to add.
 AddAlternateTitle = Choose Alternate Section
-CreateSectionButton = Create Section
-UpdateSectionButton = Update Section
 CancelButtonHint = Press to cancel without creating or updating.
 DeleteAllBlocksButton = Clear Blocks from Section
 DeleteAllBlocksButtonHint = Press to remove all Blocks from the above table and start again.
@@ -94,8 +93,7 @@ WhatBoxTip = Select what action is requested
 OptionalDelay = Optional Delay
 Milliseconds = milliseconds
 BlockStringTip = Select a Block within this Section
-On = On
-Off = Off
+# On/Off moved to jmri.NamedBeanBundle.properties key StateOff/StateOn
 HeadLabel = Signal Head:
 MastLabel = or Mast:
 SelectASignal = Select one of 
@@ -199,7 +197,6 @@ ValidateAllSections = Validate All Sections
 SetupDirectionSensors = Set Direction Sensors in Logic
 RemoveDirectionSensors = Remove Direction Sensors from Logic
 
-MessageTitle = Message
 ChoiceTitle = Choose Panel
 MissingEntryError = Error - the required "{0}" entry was not found.
 EntryError = Error in "{0}" entry -
