--- a/java/src/jmri/server/json/Bundle.properties
+++ b/java/src/jmri/server/json/Bundle.properties
@@ -25,3 +25,7 @@ ErrorMissingAttribute=Data attribute {0} is required.
 ErrorUnencodable={2} property of {0} named {1} cannot be encoded in UTF-8
 #Error message sent when client sends a "client" token in a hello message that is is use by another client.
 ErrorClientConflict=Client "{0}" is in use by another connection.
+#Errors from jmri.jmris.json.Bundle
+ErrorCreatingObject = Unable to create {0} named {1}.
+ErrorNoConsistManager = No consist manager available.
+ErrorTrainMovement = Unable to move train {0} to location {1}.
