Update IntelliJ debug settings help Fix bundle call in display.LayoutEditor + LE Dutch

--- a/java/src/jmri/jmrit/display/layoutEditor/LayoutEditorBundle.properties
+++ b/java/src/jmri/jmrit/display/layoutEditor/LayoutEditorBundle.properties
@@ -40,7 +40,7 @@ LHToolTip = Select to add a left-handed turnout when next clicking with shift do
 WYEAbbreviation = Wye
 WYETurnout = WYE Turnout
 WYEToolTip = Select to add a wye turnout when next clicking with shift down.
-Turnout = Turnout
+#Turnout = Turnout
 Crossover = Crossover
 DoubleCrossover = Double Crossover
 DoubleCrossoverAbbreviation = Double X-over
@@ -107,7 +107,7 @@ TurnoutNameToolTip = Enter name of physical turnout.
 SecondTurnoutNameToolTip = Enter name of second physical turnout.
 StateToolTip = Select turnout state corresponding to continuing route.
 ContinuingState = Continuing Route Turnout State
-Block = Block
+ConnectingBlock = Connecting Block
 BlockID = Block: Name
 BlockIDToolTip = Enter name of Block for new turnout, level crossing, or track segment.
 OccupancySensorToolTip = Enter name of occupancy sensor for this block; no entry means don't change.
@@ -230,6 +230,7 @@ LayoutDoubleSlip = Double Slip
 Anchor = Anchor Point
 EdgeNotLinked = Not Linked
 EdgeEditLink = Edit Link
+SelectPanel = Select Panel
 BlockDivider = Block Divider
 Mainline = Mainline Track
 NotMainline = Side Track
@@ -274,7 +275,6 @@ ToolBarSideRight = Right
 ToolBarSideFloat = Float
 ToolBarWide = Wide ToolBar
 ToolBox = Tool Box: {0}
-TabTurnout = Turnouts
 TabTrack = Track
 TabLabel = Labels
 TabIcon = Icons
@@ -284,8 +284,6 @@ FontSize = Font Size
 
 DropDownListsDisplayOrder = Drop Down Lists Display Order...
 DropDownListsDisplayOrderDisplayName = Display Name (User else System)
-DropDownListsDisplayOrderUserName = User Name
-DropDownListsDisplayOrderSystemName = System Name
 DropDownListsDisplayOrderUserNameSystemName = User Name followed by System Name
 DropDownListsDisplayOrderSystemNameUserName = System Name followed by User Name
 
@@ -379,7 +377,7 @@ ThroatToThroat = Throat to Throat
 ThreeWay = Three Way
 East = East
 West = West
-Route = Route
+#Route = Route
 Signal = Signal
 Tracks) = tracks)
 EnterXOverTurnout = Enter name of crossover turnout
