LE Dutch translation complete spelling and html-tag fixes in default Some LE tools labels adjusted shared ButtonOKPlus keys moved to jmrit Bundle

--- a/java/src/jmri/jmrit/display/layoutEditor/LayoutEditorBundle.properties
+++ b/java/src/jmri/jmrit/display/layoutEditor/LayoutEditorBundle.properties
@@ -80,7 +80,7 @@ IconChecksClickLabel = Icon checks click:
 ButtonAddAdditionalSensor = Add additional Sensor
 SetStateIcons = Set state icons for Unknown etc.
 ButtonCreateIcon = Create Icon on Panel
-IconChangeInfo = </html>Select new image from file,<br>then click an upper preview icon to change it.</html>
+IconChangeInfo = <html>Select new image from file,<br>then click an upper preview icon to change it.</html>
 SetIconButton = Choose Icon...
 
 ChangeIcons = Change Icons
@@ -400,7 +400,6 @@ ChangeSignalIconHint = Click to change icons used to represent signal heads (Use
 SignalHeadNameHint = Enter name (system or user) of signal head located here.
 SignalHeadEastNameHint = Enter name (system or user) of signal head for right-bound (east) or down-bound (south) trains.
 SignalHeadWestNameHint = Enter name (system or user) of signal head for left-bound (west) or up-bound (north) trains.
-SignalDoneHint = Click Done to perform tasks requested above and dismiss this dialog.
 SignalsError1 = Error - No turnout name was entered. Please enter a turnout name or cancel.
 SignalsError2 = Error - No turnout is defined for "{0}". Please enter \na turnout name in the Turnout Table and on the panel.
 SignalsError3 = Error - Turnout "{0}" is not drawn on the panel.\nPlease enter the name of a drawn turnout.
@@ -430,7 +429,7 @@ InfoMessage7 = Cannot set up logic because all connections\nhave not been define
 InfoMessage8 = Sorry, Set Signals at Crossover does\nnot work with other types of turnouts.
 InfoMessage9 = Sorry, Layout Editor does not support setting up \nlogic for a single head at the throat of a 3-way turnout.
 SignalsWarn1 = Warning - Logic was set up at signal head "{0}", but no sensors\nto protect for cross traffic at the level crossing were found.
-SignalsWarn2 = Warning - Per your instructions, the absense of signals at turnout "{0}" \nwas ignored when setting up logic for signal head "{1}".
+SignalsWarn2 = Warning - Per your instructions, the absence of signals at turnout "{0}" \nwas ignored when setting up logic for signal head "{1}".
 
 # error messages
 EntryError = Error in entry
@@ -462,8 +461,6 @@ Error18 = Error - Could not provide Reporter {0}. Cannot add Reporter Icon.
 Error19 = Error - Missing Name for Sensor {0}. Please fill in all fields.
 
 # question messages
-ButtonYesPlus = Yes - Stop Warnings
-ButtonOKPlus = OK - Stop Warnings
 Question1 = Are you sure you want to remove this turnout from the panel, along with any connected Track Segments?
 Question1r = Are you sure you want to remove this turnout from the panel?
 Question2 = Are you sure you want to remove this point from the panel, along with any connected Track Segments?
@@ -493,7 +490,6 @@ ViewBlockRouting = View Block Routing
 
 ChangeSensorIcon = Change Sensor Icon
 ChangeSensorIconHint = Click to change icons used to represent sensors.
-SensorDoneHint = Click Done to perform tasks requested above and dismiss this dialog.
 
 SensorsError1 = Error - No turnout name was entered. Please enter a turnout name or Cancel.
 SensorsError2 = Error - No turnout is defined for "{0}". Please enter \na turnout name in the Turnout Table and on the panel.
@@ -508,7 +504,6 @@ SensorsError13 = Error - Cannot assign sensor "{0}" to this block boundary\nbeca
 SignalMastsBlockNameHint = Enter name of one block where signal masts are needed at block boundary.
 
 SignalMastsTurnoutNameHint =  Enter name (system or user) of signal mast
-SignalMastDoneHint = Click Done to perform tasks requested above and dismiss this dialog.
 
 SignalMastsError4 = Error - SignalMast "{0}" does not exist. Please correct name\nor enter this SignalMast in the SignalMast Table, and try again.
 SignalMastsError5 = Error - SignalMast name was not entered. Please enter\na signal mast name for required positions or cancel.
