Full Dutch translation for LE and Display Bundle (CPE) i18n CPE context menu Properties, fix Rotate key var, adjust LE Connections contect menu

--- a/java/src/jmri/jmrit/display/layoutEditor/LayoutEditorBundle.properties
+++ b/java/src/jmri/jmrit/display/layoutEditor/LayoutEditorBundle.properties
@@ -48,7 +48,7 @@ DoubleCrossoverToolTip = Select to add a double crossover turnout when next clic
 #RHCrossover = RH Xover etc > moved to DisplayBundle
 RHCrossoverToolTip = Select to add a right-hand single crossover turnout when next clicking with shift down.
 LHCrossoverToolTip = Select to add a left-hand single crossover turnout when next clicking with shift down.
-Connections_ = Connections {0}
+Connections = Connections
 Dashed = Dashed
 DashedCheckBoxTip = Sets track segment style - checked for dashed, unchecked for solid.
 MainlineBox = Mainline
@@ -160,7 +160,7 @@ UseCount = Current Use Count
 OccupiedSense = Occupied Sense
 OccupiedSenseHint = Select the occupancy Sensor state when the Block is occupied.
 MemoryVariableTip = Enter name (system or user) of Memory Variable (optional).
-TrackColor = Track Color:
+TrackColor=Track Color
 TrackColorHint = Select the track color when this block is unoccupied.
 OccupiedColor = Occupied Track Color:
 OccupiedColorHint = Select the track color when this block is occupied.
