--- a/java/src/jmri/jmrit/dispatcher/DispatcherBundle.properties
+++ b/java/src/jmri/jmrit/dispatcher/DispatcherBundle.properties
@@ -111,6 +111,24 @@ StartingBlockBoxHint = Select the Block where the Train is located when Transit 
 DestinationBlockBoxLabel = Destination Location of Train
 DestinationBlockBoxHint = Select the Block where the Train will be located when Transit ends.
 AutoRun = Run Train Automatically
+AllocateMethodLabel = Allocation Method
+AllocateMethodBoxHint = Number of Blocks ahead to auto allocate
+3Ahead = 3 Ahead
+AsFarAsPos = As Far As Pos
+ToSafeSections = To Safe Secs
+1Ahead = 1 Ahead
+2Ahead = 2 Ahead
+4Ahead = 4 Ahead
+5Ahead = 5 Ahead
+6Ahead = 6 Ahead
+AllocateAllTheWay = Allocate Train as far as possible
+AllocateAllTheWayBoxHint = Check for train to be allocated from start to end as far as possible. Leave unchecked to allocate no more than three Sections ahead.
+UseSpeedProfileLabel = Use Speed Profile
+UseSpeedProfileHint = Only Available if Speed Profiled Loco
+StopBySpeedProfileLabel = Stop By Speed Profile
+StopBySpeedProfileHint  = Only Available if Speed Profiled Loco
+StopBySpeedProfileAdjustLabel = Adjust
+StopBySpeedProfileAdjustHint = Only If Stopping By Speed Profile 1500 is normal, larger numbers stop quicker.
 AutoRunBoxHint = Select to request this Train be run automatically by JMRI Dispatcher.
 AllocateAllTheWay = Allocate Train as far as possible
 AllocateAllTheWayBoxHint = <html>Select for Train to be allocated from start to end as far as possible.<br>\
