Make changes suggested. Remove combo box and use 3 radiobuttons. remove unused and commented out code. Add test for traininfo

--- a/java/src/jmri/jmrit/dispatcher/DispatcherBundle.properties
+++ b/java/src/jmri/jmrit/dispatcher/DispatcherBundle.properties
@@ -113,16 +113,9 @@ DestinationBlockBoxHint = Select the Block where the Train will be located when 
 AutoRun = Run Train Automatically
 AllocateMethodLabel = Allocation Method
 AllocateMethodBoxHint = Number of Blocks ahead to auto allocate
-3Ahead = 3 Ahead
+NumberOfBlocks = Number of Blocks
 AsFarAsPos = As Far As Pos
 ToSafeSections = To Safe Secs
-1Ahead = 1 Ahead
-2Ahead = 2 Ahead
-4Ahead = 4 Ahead
-5Ahead = 5 Ahead
-6Ahead = 6 Ahead
-AllocateAllTheWay = Allocate Train as far as possible
-AllocateAllTheWayBoxHint = Check for train to be allocated from start to end as far as possible. Leave unchecked to allocate no more than three Sections ahead.
 UseSpeedProfileLabel = Use Speed Profile
 UseSpeedProfileHint = Only Available if Speed Profiled Loco
 StopBySpeedProfileLabel = Stop By Speed Profile
