BugFix: minor drawing errors (colors, angles)
Refactor getMainline -> isMainline.
Fixed Edge Connector popup (LinkedToX).
Removed redundant isHidden isEditable checks.
Reverted controlPointSize[2] to (static) LayoutEditor.SIZE[2].

--- a/java/src/jmri/jmrit/display/layoutEditor/LayoutEditorBundle.properties
+++ b/java/src/jmri/jmrit/display/layoutEditor/LayoutEditorBundle.properties
@@ -228,6 +228,7 @@ LevelCrossing = Level Crossing
 LayoutSingleSlip = Single Slip
 LayoutDoubleSlip = Double Slip
 Anchor = Anchor Point
+LinkedToX = Linked to {0}
 EdgeNotLinked = Not Linked
 EdgeEditLink = Edit Link
 SelectPanel = Select Panel
