--- a/java/src/jmri/jmrit/logix/WarrantBundle.properties
+++ b/java/src/jmri/jmrit/logix/WarrantBundle.properties
@@ -105,7 +105,7 @@ ToolTipSearchDepth= Upper limit for the number of OBlocks in a warrant route
 ToolTipSpeedNameTable=Every Speed Name used in your Signal System's aspects must be a row in this table
 ToolTipAppearanceTable=Map SignalHead appearance to Speed Name. Every SignalHead appearance must be a row in this table
 ToolTipRampIncrement=Throttle setting increment for each speed change when ramping speed
-ToolTipTimeIncrement=Length of time in milliseconds between each speed change when ramping speed
+ToolTipTimeIncrement=Length of time in milliseconds between each speed change when ramping speed (from 200 to 10,000 ms)
 ToolTipShareRoute = Train has clearance to enter origin block only. Warrant allocation occurs as train is permitted to proceed.
 ToolTipNoRamping = Warrant makes immediate speed changes when entering the approach block
 ToolTipRunETOnly = Warrant runs on elapsed time only. Does not use block detection.
