--- a/appveyor.yml
+++ b/appveyor.yml
@@ -2,7 +2,8 @@ version: '{build}'
 clone_depth: 50
 install:
   - SET JAVA_HOME=C:\Program Files\Java\jdk1.8.0
-  - SET PATH=%JAVA_HOME%\bin;%PATH%
+  - SET GECKODRIVER=C:\Tools\WebDriver
+  - SET PATH=%JAVA_HOME%\bin;%GECKODRIVER%;%PATH%
 #  - echo PATH %PATH%
 #  - echo JAVA_HOME %JAVA_HOME%
   - java -version
