--- a/java/src/jmri/jmrix/powerline/PowerlineBundle.properties
+++ b/java/src/jmri/jmrix/powerline/PowerlineBundle.properties
@@ -8,3 +8,9 @@ MenuSystem                  = Powerline
 
 MenuItemCommandMonitor      = Communications Monitor
 MenuItemSendCommand         = Send Command
+
+# PowerlineTurnout/Light/Sensor (Add to table pane) items
+AddOutputEntryToolTip = A3 (Output House code A + device 3)<br>\
+House code: A-P, device 1-16 (inclusive).
+AddInputEntryToolTip = A3 (Output House code A + device 3)<br>\
+House code: A-P, device 1-16 (inclusive).
