Restored original SerialMonFrame GUI Added packet filtering window and button to subclass

--- a/java/src/jmri/jmrix/cmri/serial/serialmon/SerialFilterBundle.properties
+++ b/java/src/jmri/jmrix/cmri/serial/serialmon/SerialFilterBundle.properties
@@ -47,7 +47,7 @@ ShowRawDataTip          = If checked, show the raw traffic in hex
 ShowTimestampText       = Show timestamps
 ShowTimestampTip        = If checked, show timestamps before each message
 
-ShowWithTimeDiffText    = w/Time Diff
+ShowWithTimeDiffText    = Timestamps w/Time Diff
 ShowWithDimeDiffTip     = If checked, show time difference in mS
 
 WindowOnTopText         = Window always on Top
