Fixed logger call Removed delatT function.  Not needed when metrics implemented. Added CMRI connection memo name to serial window title

--- a/java/src/jmri/jmrix/cmri/serial/serialmon/SerialFilterBundle.properties
+++ b/java/src/jmri/jmrix/cmri/serial/serialmon/SerialFilterBundle.properties
@@ -9,6 +9,7 @@ NodeBoxLabel		= Node:
 NodeBoxTip		= Select a configured node
 CMRINodesText           = C/MRI Nodes
 MonitorNodesText        = Monitor Nodes
+Connection              = - Connection 
 
 MonitorButtonText	= Open C/MRI Monitor
 MonitorButtonTip	= Click here to Open the C/MRI Monitor
