--- a/pom.xml
+++ b/pom.xml
@@ -406,7 +406,7 @@
                       </goals>
                       <configuration>
                          <sources>
-                             <source>/java/acceptancetests/step_definitions</source>
+                             <source>java/acceptancetests/step_definitions</source>
                          </sources>
                       </configuration>
                    </execution>
@@ -631,6 +631,12 @@
             <groupId>org.seleniumhq.selenium</groupId>
             <artifactId>selenium-java</artifactId>
             <version>3.5.2</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+	        <groupId>io.github.bonigarcia</groupId>
+	        <artifactId>webdrivermanager</artifactId>
+	        <version>1.7.2</version>
             <scope>test</scope>
         </dependency>
         <dependency>
