use each loco's momentum CVs for distance traveled and speed calculations

--- a/java/src/jmri/jmrit/logix/WarrantBundle.properties
+++ b/java/src/jmri/jmrit/logix/WarrantBundle.properties
@@ -70,6 +70,7 @@ NeverMerge		= Don't Merge
 
 # NXFame
 scaleMenu       = {0} scale, {1}:1
+NXWarrantInProgress= Do you want to discard this NXWarrant and proceed with the new one?
 
 # Layout Preferences
 TitleWarrantPreferences= Warrants
