--- a/build.xml
+++ b/build.xml
@@ -1345,6 +1345,7 @@
             <sysproperty key="log4j.ignoreTCL" path="true/"/>
             <sysproperty key="java.library.path" path=".:${libdir}:${arch.lib.path}"/>
             <sysproperty key="jmri.prefsdir" path="${tempdir}"/>
+            <sysproperty key="cucumber.options" value="--tags ~@Ignore"/>
 
             <classpath refid="test.class.path"/>
 
