--- a/appveyor.yml
+++ b/appveyor.yml
@@ -3,7 +3,8 @@ clone_depth: 50
 install:
   - SET JAVA_HOME=C:\Program Files\Java\jdk1.8.0
   - SET GECKODRIVER=C:\Tools\WebDriver
-  - SET PATH=%JAVA_HOME%\bin;%GECKODRIVER%;%PATH%
+  - SET CHROMEDRIVER=C:\Tools\WebDriver\chromedriver.exe
+  - SET PATH=%JAVA_HOME%\bin;%GECKODRIVER%;%CHROMEDRIVER%;%PATH%
 #  - echo PATH %PATH%
 #  - echo JAVA_HOME %JAVA_HOME%
   - java -version
