--- a/.travis.yml
+++ b/.travis.yml
@@ -20,7 +20,7 @@ before_install:
   # install gechodriver on linux
   - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then wget https://github.com/mozilla/geckodriver/releases/download/v0.19.0/geckodriver-v0.19.0-linux64.tar.gz ; mkdir geckodriver ; tar -xzf geckodriver-v0.19.0-linux64.tar.gz -C geckodriver ; export PATH=$PATH:$PWD/geckodriver ; fi
   # install chromedriver on linux
-  - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then wget https://chromedriver.storage.googleapis.com/2.33/chromedriver_linux64.zip ; mkdir chromedriver ; cd chromedriver; unzip -c chromedriver chromedriver_linux64.zip ; export PATH=$PATH:$PWD/geckodriver ; fi
+  - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then wget https://chromedriver.storage.googleapis.com/2.33/chromedriver_linux64.zip ; mkdir chromedriver ; unzip -c chromedriver chromedriver_linux64.zip ; export PATH=$PATH:$PWD/chromedriver ; fi
 
 install:
   - mvn verify -DskipTests=true -Dmaven.javadoc.skip=true -B -V
