--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,7 @@ addons:
     packages:
     - graphviz
     - libalut0
+    - dbus-launch
   firefox: latest
   chrome: stable
 
@@ -21,6 +22,8 @@ before_install:
   - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then wget https://github.com/mozilla/geckodriver/releases/download/v0.19.0/geckodriver-v0.19.0-linux64.tar.gz ; mkdir geckodriver ; tar -xzf geckodriver-v0.19.0-linux64.tar.gz -C geckodriver ; export PATH=$PATH:$PWD/geckodriver ; fi
   # install chromedriver on linux
   - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then wget https://chromedriver.storage.googleapis.com/2.33/chromedriver_linux64.zip ; mkdir chromedriver ; cd chromedriver; unzip ../chromedriver_linux64.zip ;cd .. ; export PATH=$PATH:$PWD/chromedriver ; fi
+  # silence errors from firefox about dbus.
+  - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then dbus-launch ; fi
 
 install:
   - mvn verify -DskipTests=true -Dmaven.javadoc.skip=true -B -V
