Add LayoutEditor Checks
Add a Tools menu, "Check for..." item with sub-menu items "Un-Connected
Tracks" and "Un-Blocked Tracks".

--- a/java/src/jmri/jmrit/display/layoutEditor/LayoutEditorBundle.properties
+++ b/java/src/jmri/jmrit/display/layoutEditor/LayoutEditorBundle.properties
@@ -586,3 +586,12 @@ VetoWillBeRemovedFromBlock = It will be removed from the layout block
 
 BeanNameLayoutBlock = Layout Block
 Line=Line
+
+#check menu items
+CheckMenuTitle = Check
+ReCheckMenuTitle = Re-Check
+CheckMenuToolTip = Use this menu to run layout editor checks
+CheckUnConnectedTracksMenuTitle = Un-Connected Tracks
+CheckUnConnectedTracksMenuToolTip = Select this to check for tracks that have unconnected ends
+CheckUnBlockedTracksMenuTitle = Un-Blocked Tracks
+CheckUnBlockedTracksMenuToolTip = Select this to check for tracks that do not have an assigned block
