--- a/.travis.yml
+++ b/.travis.yml
@@ -22,8 +22,6 @@ before_install:
   - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then wget https://github.com/mozilla/geckodriver/releases/download/v0.19.0/geckodriver-v0.19.0-linux64.tar.gz ; mkdir geckodriver ; tar -xzf geckodriver-v0.19.0-linux64.tar.gz -C geckodriver ; export PATH=$PATH:$PWD/geckodriver ; fi
   # install chromedriver on linux
   - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then wget https://chromedriver.storage.googleapis.com/2.33/chromedriver_linux64.zip ; mkdir chromedriver ; cd chromedriver; unzip ../chromedriver_linux64.zip ;cd .. ; export PATH=$PATH:$PWD/chromedriver ; fi
-  # silence errors from firefox about dbus.
-  - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then dbus-launch ; fi
 
 install:
   - mvn verify -DskipTests=true -Dmaven.javadoc.skip=true -B -V
@@ -31,6 +29,8 @@ install:
 before_script:
   # setup a display on linux ( the sleep gives xvfb some time to start )
   - if [[ "$TRAVIS_OS_NAME" == "linux" && "$HEADLESS" == "false" ]] ; then export DISPLAY=:99.0 ; sh -e /etc/init.d/xvfb start ; sleep 3 ; fi
+  # silence errors from firefox about dbus.
+  - if [[ "$TRAVIS_OS_NAME" == "linux" && "$HEADLESS" == "false" ]]; then dbus-launch ; fi
 
 script:
   travis_wait 40 ./scripts/travis.sh
