--- a/java/src/jmri/jmrit/display/layoutEditor/LayoutEditorBundle.properties
+++ b/java/src/jmri/jmrit/display/layoutEditor/LayoutEditorBundle.properties
@@ -591,7 +591,12 @@ Line=Line
 CheckMenuTitle = Check
 ReCheckMenuTitle = Re-Check
 CheckMenuToolTip = Use this menu to run layout editor checks
+CheckNoResultsMenuItemTitle = No Results
+CheckNoResultsMenuItemToolTip = This check passed: there are no results to report
+
 CheckUnConnectedTracksMenuTitle = Un-Connected Tracks
 CheckUnConnectedTracksMenuToolTip = Select this to check for tracks that have unconnected ends
 CheckUnBlockedTracksMenuTitle = Un-Blocked Tracks
 CheckUnBlockedTracksMenuToolTip = Select this to check for tracks that do not have an assigned block
+CheckNonContiguousBlocksMenuTitle = Non-Contiguous Blocks
+CheckNonContiguousBlocksMenuToolTip = Select this to check for blocks that are not contiguous
