FindBug fixes... plus... NEW FEATURE!
FEATURE: Layout track popup menu connection items now open popup menu
for that connection (when selected)!

Added CheckInProgressMenuItem, Title &  ToolTip.
Check menu now enabled/disabled when in/out of editing mode.

--- a/java/src/jmri/jmrit/display/layoutEditor/LayoutEditorBundle.properties
+++ b/java/src/jmri/jmrit/display/layoutEditor/LayoutEditorBundle.properties
@@ -591,6 +591,8 @@ Line=Line
 CheckMenuTitle = Check
 ReCheckMenuTitle = Re-Check
 CheckMenuToolTip = Use this menu to run layout editor checks
+CheckInProgressMenuItemTitle = Check In Progress...
+CheckInProgressMenuItemToolTip = Checking is in progress... (please wait)
 CheckNoResultsMenuItemTitle = No Results
 CheckNoResultsMenuItemToolTip = This check passed: there are no results to report
 
