Migrate jmrix.EasyDcc, removed instance(), mark deprecated other jmrix white spacing, Javadoc

--- a/java/src/jmri/jmrix/JmrixBundle.properties
+++ b/java/src/jmri/jmrix/JmrixBundle.properties
@@ -243,6 +243,7 @@ ApplicationVersionLabel = Application Version:
 ProtocolVersionLabel    = Protocol Version:
 UseDefaultValue         = Use default setting
 ButtonResetDefaults     = Defaults
+MenuItemConsole         = Console
 
 #Error message displayed on start if internal connection has all defaults.
-ManagerDefaultSelector.AllInternal=All defaults are assigned to an internal connection.
+ManagerDefaultSelector.AllInternal = All defaults are assigned to an internal connection.
