--- a/java/src/jmri/jmrix/easydcc/EasyDccBundle.properties
+++ b/java/src/jmri/jmrix/easydcc/EasyDccBundle.properties
@@ -2,10 +2,11 @@
 #
 # Default properties for the jmri.jmrix.easydcc menu
 
-MenuEasyDCC                         = EasyDCC
-MenuItemXNetCommandMonitor          = EasyDCC Monitor
-MenuItemSendXNetCommand             = Send DCC++ Command
+MenuEasyDCC             = EasyDCC
+MenuItemSendCommand     = Send EasyDCC Command...
+
+SendCommandTitle        = Send EasyDCC Command
 
 # EasyDCCTurnout (Add to table pane) items
-AddOutputEntryToolTip = 102 <br>\
+AddOutputEntryToolTip   = 102 <br>\
   enter as number from 0 to 511 (inclusive).
